# sdl_playground

./: CMakeLists.txt  Makefile  compile_commands.json  compile_flags.txt  main.c
source/: definitions.h  game_assets.c  game_assets.h  game_config.c  game_config.h  game_events.c  game_events.h  game_loop.h  game_loop_renderer.c  game_loop_software.c  game_types.h  game_world.c  game_world.h  general_functions.c  main.c  sdl_functions.c  sdl_functions.h
